--- a/style.css
+++ b/style.css
@@ -1,174 +1,54 @@
-/* --------------------------------------------------- */
-/* Basic Setup */
-/* --------------------------------------------------- */
-
-* {
-  margin: 0;
-  padding: 0;
+body {
+  background: #222;
+  color: #fff;
+  position: relative;
+  text-align: center;
+  font-size: 1rem;
+  font-family: sans-serif;
+  padding-bottom: 3em;
 }
-
-html {
-	color: #555;
-	font-family: 'Raleway', 'Arial', sans-serif;
-	font-weight: 400;
-	font-size: 16px;
-	text-rendering: optimizeLegibility;
-	}
-
-/* --------------------------------------------------- */
-/* Resuable content */
-/* --------------------------------------------------- */
-
-h1 {
-	font-family: Impact, Arial, sans-serif;
-	-webkit-text-stroke-width: 1.5px;
-   -webkit-text-stroke-color: black;
-   font-size: 320%;
-   text-transform: uppercase;
-   letter-spacing: 1px;
+.page-wrap {
+  display: inline-block;
+  margin: 2em auto;
 }
-
-h2 {font-family: Tahoma, Arial, sans-serif;}
-
-
-.background-blue,
-.meme-gallery {
-	background-color: #d4f0fd;
-	padding: 1%;
+.controls {
+  &__input {
+    display: block;
+    margin: 0 auto;
+    background: none;
+    border: none;
+    font-size: 1em;
+    padding-bottom: .5em;
+    border-bottom: 2px solid #ccc;
+    text-align: center;
+    outline: none;
+    color: #fff;
+  }
+  &__btn {
+    background: dodgerblue;
+    color: #fff;
+    border: none;
+    font-size: 1em;
+  }
+  &__label {
+     display: block;
+    font-size: .8em;
+    padding-top: .3em;
+    margin-bottom: 2em;
+  }
 }
-
-/* --------------------------------------------------- */
-/* Header */
-/* --------------------------------------------------- */
-
-.title {width: 900px;}
-
-
-/* --------------------------------------------------- */
-/* Meme Gallery */
-/* --------------------------------------------------- */
-.gallery {
-	list-style: none;
-	width: 100%;
+canvas {
+  background-color: #eee;
+  // opacity: 0;
+  transition: opacity .3s;
+  &.show {
+    opacity: 1;
+  }
 }
-
-.meme-img{
-	display: inline-block;
-	margin: 1%;
-	width: 500px;
-	height: auto;
-	text-align: center;
-	position: relative;
-	opacity: 1;
+.canvas-wrap {
+  margin-top: 50px;
+  position: relative;
 }
-
-img {width: 500px;}
-
-.meme-img:hover {opacity: 0.6;}
-
-.red-cross {
-	width: 500px;
-	height: 250px;
-	content: "X";
-	position: absolute;
-	top: 50%;
-	left:50%;
-	transform: translate(-50%, -66%);
-	font-weight: 700;
-	text-align: center;
-	font-size: 1500%;
-	opacity: 0;
+#canvasID {
+  z-index: 9999;
 }
-
-.red-cross:hover {
-	opacity: 1.6;
-	z-index: 20;
-}
-
-.text {
-	font-family: Impact, Arial, sans-serif;
-	width: 500px;
-	font-size: 250%;
-	line-height: 1.1em;
-	letter-spacing: 1.5px;
-	color: black;
-   -webkit-text-fill-color: white; 
-   -webkit-text-stroke-width: 1.7px;
-   -webkit-text-stroke-color: black;
-   text-transform: uppercase;
-   overflow-wrap: break-word;
-  word-wrap: break-word;
-  hyphens: auto;
-  opacity: 1;
-}
-
-.text:hover {opacity: 0.6;}
-
-.top {
-	position: absolute;
-	top: 0;
-	z-index: 9;
-	max-height: 50%;
-}
-
-.bottom {
-	position: absolute;
-	bottom: 0;
-	z-index: 9;
-	max-height: 50%;
-}
-
-/* --------------------------------------------------- */
-/* Footer */
-/* --------------------------------------------------- */
-
-footer {
-	background-color: #b9ebee;
-	padding: 20px;
-	font-size: 80%;
-	text-align: center;
-	border-top: 1px solid #c7eff1;
-}
-
-.footer p {font-family: Impact, Arial, sans-serif;
-text-transform: uppercase;}
-
-/* --------------------------------------------------- */
-/* Media Queries */
-/* --------------------------------------------------- */
-
-
-/*large ipad to desktop/laptop */
-@media only screen and (max-width: 1200px) {
-
-
-}
-
-
-/*small tablet Large Ipad */
-
-
-@media only screen and (max-width: 1023px) {
-
-
-}
-
-/*Large Phones  to small tablets*/
-@media only screen and (max-width: 767px) {
-	.title {width: 85%;}
-	h1{font-size: 280%;}
-	h2 {font-size: 190%;}
-}
-
-/*Small Phones */
-@media only screen and (max-width: 480px) {
-h1{font-size: 250%;}
-h2 {font-size: 110%;}
-html{font-size: 90%;}
-
-img,
-.meme-img,
-.red-cross,
-.text {width: 350px;}
-
-.text {font-size: 160%;}
